ckanext/dgu/theme/src/css/dgu-ckan.less
/* ... */
.issue-comment-header {
  padding-left: 15px;
  padding-right: 10px;
  color: #777;
  background-color: #f7f7f7;
  border-bottom: 1px solid #eee;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.issue-comment-header .author {
  font-weight: bold;
  color: #555;
}

.issue-comment-header .issue-comment-actions .issue-comment-action {
  float: right;
}

.issue-comment-header .subtle-btn {
  padding: 10px 5px;
  color: #999;
}
.issue-comment-header a.subtle-btn:hover {
  color: #009F00;
  text-decoration: none;
}
.issue-comment-header .subtle-btn-abuse:hover {
  color: #DD0000;
}
.issue-comment-header .subtle-btn-abuse-active {
  color: #DD0000;
}
.issue-comment-header .subtle-btn-abuse:hover {
  color: #FF0000;
  text-decoration: none;
}
.issue-comment-header .subtle-btn-abuse-active:hover {
  color: #999;
  text-decoration: none;
}

.issue-comment-action {
  margin-top: 8px;
  padding-left: 5px;
}

.issue-header-text {
  max-width: 78%;
  padding-top: 10px;
  padding-bottom: 10px;
}

.issue-comment-content {
  padding: 15px;
  font-size: 14px
}

.issue-comment-new {
  border-top: 2px solid #f3f3f3;
  background-color: #fff;
}

.issue-comment-new textarea {
  margin-bottom: 0;
}

.issue-comment-new .form-actions {
  margin: 0;
  padding: 0;
}

.issue-comment-label {
    float: right;
    margin: 8px 5px 0px 10px;
    padding: 2px 5px;
    font-size: 12px;
    border: 1px solid rgba(0, 0, 0, 0.1);
    border-radius: 3px;
}

.issue-abuse {
  color: #b0b0b0;
}

/*****************************************
  Issue homes - dataset, organization, all
  ****************************************/

.issues-home .header .page-heading h1 {
  float: left;
}

.issues-home .header .issues-actions {
  float: right;
}

.list-group {
  margin-left: 0;
}

.list-group-header {
  position: relative;
  display: block;
  z-index: 22;
  margin-top: 20px;
  margin-bottom: -1px;
  background-color: #F8F8F8;
  border: 1px solid #E5E5E5;
  border-radius: 3px 3px 0px 0px;
}

.list-group-header a {
  margin-top: 20px;
  margin-bottom: -1px;
}

.list-group-item:first-child {
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

.list-group-item {
  position: relative;
  display: block;
  margin-bottom: -1px;
  padding: 8px 10px 10px 40px;
  border: 1px solid #e5e5e5;
}

.list-group-item-name {
  margin: 0 60px 0 0;
  font-size: 15px;
  line-height: 1.3;
  margin-bottom: 2px;
  word-wrap: break-word;
}

.list-group-item-meta {
  font-size: 11px;
  line-height: 17px;
  list-style-type: none;
  overflow: hidden;
  color: #999999;
  margin: 0;
}

.list-group-item .list-group-item-name a, .list-group-item .list-group-item-meta a {
  color: #333;
}

.list-group-item-meta>li {
  display: inline-block;
  margin-right: 4px;
}

.list-group-item-number {
  position: relative;
  top: 2px;
  float: right;
  margin-left: 12px;
  font-size: 13px;
  color: #999;
}

.list-group-item-name .icon {
  float: left;
  margin-left: -24px;
  font-size: 16px;
  line-height: 1;
  display: inline-block;
  vertical-align: middle;
  position: relative;
}

.list-group-item-name .icon.open {
  color: #6cc644;
}

.list-group-item-name .icon.abuse {
  color: #ffa500;
}

.list-group-item-name .icon.closed {
  color: #B9B9B9;
}
#issue-page a {
    color: #000;
}

/* Sidebar */

.issue-home-sidebar {
  margin: 20px 0 0 15px;
}

.module-content .pagination {
  margin-left: 0px;
  margin-right: -15px;
  margin-bottom: 0px;
}
/* heading */
.module-heading {
    margin: 0px;
    font-size: 14px;
    line-height: 1.3;
    /*border-top: 1px solid #DDD;*/
    /*border-bottom: 1px solid #DDD;*/

    padding-top: 6px;
    padding-bottom: 4px;
    font-weight: bold;
    text-transform: none;
}
/* option */
.nav-simple, .nav-aside {
    margin: 0px;
    list-style: outside none none;
    /*padding-bottom: 0px;*/

    padding: 5px 0px;
}
.nav-item {
    background-color: #eee;
}
.nav-item.active {
    background-color: #bbb;
}
.nav-item.active > a, .nav-aside li.active a {
    color: #FFF;
}
.nav-item > a, .nav-aside li a {
    color: #000;
}
.context-info h1.heading {
    margin: 0px 0px 20px;
    font-size: 18px;
    line-height: 1.3;
    -moz-hyphens: auto;
}


.chosen-container {
  border: solid 2px #ddd;
}

.facet-option em {
    font-size: small;
}

